--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,6 +46,8 @@ services:
       - PROVIDER_LCSC_ENABLED=1
       - PROVIDER_DIGIKEY_CLIENT_ID=${PROVIDER_DIGIKEY_CLIENT_ID}
       - PROVIDER_DIGIKEY_SECRET=${PROVIDER_DIGIKEY_SECRET}
+      - PROVIDER_TME_KEY=${PROVIDER_TME_KEY}
+      - PROVIDER_TME_SECRET=${PROVIDER_TME_SECRET}
 
   database:
     container_name: partdb_database
