--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,6 +48,9 @@ services:
       - PROVIDER_DIGIKEY_SECRET=${PROVIDER_DIGIKEY_SECRET}
       - PROVIDER_TME_KEY=${PROVIDER_TME_KEY}
       - PROVIDER_TME_SECRET=${PROVIDER_TME_SECRET}
+      - PROVIDER_MOUSER_KEY=${PROVIDER_MOUSER_KEY}
+      - PROVIDER_MOUSER_SEARCH_LIMIT=${PROVIDER_MOUSER_SEARCH_LIMIT}
+      - PROVIDER_MOUSER_SEARCH_OPTION=${PROVIDER_MOUSER_SEARCH_OPTION}
 
   database:
     container_name: partdb_database
