--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,6 +51,8 @@ services:
       - PROVIDER_MOUSER_KEY=${PROVIDER_MOUSER_KEY}
       - PROVIDER_MOUSER_SEARCH_LIMIT=${PROVIDER_MOUSER_SEARCH_LIMIT}
       - PROVIDER_MOUSER_SEARCH_OPTION=${PROVIDER_MOUSER_SEARCH_OPTION}
+      - PROVIDER_OCTOPART_CLIENT_ID=${PROVIDER_OCTOPART_CLIENT_ID}
+      - PROVIDER_OCTOPART_SECRET=${PROVIDER_OCTOPART_SECRET}
 
   database:
     container_name: partdb_database
